# AdventOfCode

./: .env  .gitignore  new_day.py  pyproject.toml  run_current_day.py  start_part2.py
2021/Day1/: count_depth_increases_by_window.py
2021/Day2/: calculate_final_position.py  calculate_final_position_2.py
2022/Day10/: gather_signal.py
2022/Day11/: monkey_business.py  monkey_parse.py  part1.py  part2.py
2022/Day12/: shortest_path.py
2022/Day2/: tally_points_for_strategy.py  tally_points_for_strategy_2.py
2022/Day3/: detect_duplicates.py  detect_team_badges.py
2022/Day4/: count_overlapping_schedules.py  count_partial_overlapping_schedules.py
2022/Day5/: process_stacks.py  process_stacks_multimove.py
2022/Day6/: detect_key.py
2022/Day7/: command.py  find_large_folders.py  find_smallest_dir_to_delete.py  fs_parser.py  node.py  output.py
2022/Day8/: count_visible_trees.py  get_highest_scenic_score.py
2022/Day9/: grid.py  move_head.py  move_tail.py  record_tail_positions.py
2023/Day1/: part1.py  part2.py
2023/Day2/: part1.py  part1_test.py  part2.py
2025/Day1/: part1.py  part2.py  part2_test.py
2025/Day10/: example.txt  part1.py  part1_test.py  part2.py  part2_test.py
2025/Day2/: part1.py  part2.py
2025/Day3/: part1.py  part2.py
2025/Day4/: part1.py  part2.py
2025/Day5/: part2.py
2025/Day6/: part1.py  part2.py
2025/Day7/: part1.py  part2.py
2025/Day8/: example.txt  part1.py  part2.py
2025/Day9/: part1.py  (+1 more)
tools/: new_day.py  start_part2.py
utils/: __init__.py  dsu.py  point2d.py  point3d.py  rectangle.py  test_rectangle.py
(+1 files in other folders)
